manifests/ingressroute/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-basicauth
  namespace: kube-system
spec:
  basicAuth:
    secret: traefik
    removeHeader: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.mmontes-dev-v2.duckdns.org`)
      middlewares:
        - name: traefik-basicauth
          namespace: kube-system
      services:
        - name: api@internal
          kind: TraefikService
